Aesthetic fixes for notification panel on mobile devices

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -14,6 +14,7 @@ $color--header-bg:                          $hint-of-red;
 $color--header-border:                      $french-grey;
 $color--header-link-border:                 $french-grey;
 $color--header-link-active-border:          $red-orange;
+$color--notification-footer-border:         $jaguar;
 
 // Shared rules
 $rule--nav-link-pad:                        "11px 15px";
